# ubica_engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: Constants.h  GameStateMachine.cpp  GameStateMachine.h  Helpers.hpp  IGameManager.h  TimersHolder.hpp  World.cpp  World.h
Engine/Animation/: Animation.cpp  Animation.h
Engine/Base/: Character.cpp  Character.h  Drawable.cpp  Drawable.h  DrawableObject.cpp  DrawableObject.h  GameObject.cpp  GameObject.h  Pickable.cpp  Pickable.h  TransformableObject.cpp  TransformableObject.h
Engine/Core/: ThreadedTimer.cpp  ThreadedTimer.h  Timer.cpp  Timer.h
Engine/DataBase/: DataBaseManager.cpp  DataBaseManager.h  DataBaseRequestData.h  sqlite3_helpers.h  sqlite3_pointer.h
Engine/Particles/: ParticleSystem.cpp  ParticleSystem.h
Engine/Physics/: ObjectsAttractionManager.cpp  ObjectsAttractionManager.h
Engine/UI/: DamageIndicator.cpp  DamageIndicator.h  HealthBar.cpp  HealthBar.h
Engine/UI/GameScreen/: GameScreenBase.cpp  GameScreenBase.h  GameScreenManager.cpp  GameScreenManager.h
Engine/UI/UIComponents/: DamageIndicator.h  HealthBar.cpp  HealthBar.h
Primitives/: CMakeLists.txt  Color.h  Drawable.h  Event.hpp  IDrawable.h  Rect.hpp  Vector2.hpp  primitives.cpp
Primitives/CircleShape/: CircleShape.hpp  CircleShapeFactory.hpp  ICircleShape.h
Primitives/Image/: IImage.h  Image.hpp  ImageFactory.hpp
Primitives/Impls/SFMLBased/: CMakeLists.txt  Helpers.hpp  SFMLCircleShape.hpp  SFMLFont.hpp  SFMLImage.hpp  SFMLRect.hpp  SFMLRectangleShape.hpp  SFMLRenderWindow.hpp  SFMLSprite.hpp  SFMLText.hpp  SFMLTexture.hpp  SFMLView.hpp
Primitives/Impls/SFMLBased/Rect/: SFMLRect.cpp  SFMLRect.h
Primitives/Impls/SFMLBased/Sprite/: SFMLSprite.cpp  SFMLSprite.h
Primitives/Impls/SFMLBased/Vector2/: SFMLVector2.cpp  SFMLVector2.h
Primitives/Primitives/: Clock.hpp  Color.h  Config.h  Drawable.h  Event.hpp  Vector2.hpp
Primitives/Primitives/CircleShape/: CircleShape.hpp  ICircleShape.h
Primitives/Primitives/Font/: Font.hpp  FontFactory.hpp  IFont.h
Primitives/Primitives/Image/: IImage.h  Image.hpp
Primitives/Primitives/RectangleShape/: IRectangleShape.h  RectangleShape.hpp  RectangleShapeFactory.hpp
Primitives/Primitives/RenderWindow/: IRenderWindow.h  RenderWindow.hpp  RenderWindowFactory.hpp
Primitives/Primitives/Sprite/: ISprite.h  Sprite.hpp
Primitives/Primitives/Text/: IText.h  Text.hpp  TextFactory.hpp
Primitives/Primitives/Texture/: ITexture.h  Texture.hpp
Primitives/Primitives/View/: IView.h  View.hpp  ViewFactory.hpp
Primitives/Rect/: IRect.h  Rect.h  Rect.hpp  RectFactory.hpp
Primitives/Rect/Interface/: IRect.h  RectFactory.h
Primitives/RectangleShape/: IRectangleShape.h  RectangleShape.hpp
Primitives/RenderWindow/: IRenderWindow.h  RenderWindow.hpp  RenderWindowFactory.hpp
Primitives/Sprite/: ISprite.h  Sprite.h  Sprite.hpp  SpriteFactory.hpp
Primitives/Sprite/Interface/: ISprite.h  SpriteFactory.h
Primitives/Texture/: ITexture.h  Texture.hpp  TextureFactory.hpp
Primitives/Vector2/: Vector2.h
Primitives/Vector2/Interface/: IVector2.h  Vector2Factory.h
cpplib/: out_ptr.hpp  singletone.hpp
include/: Character.h
src/: Animation.cpp  Character.cpp  GameObject.cpp  ParticleSystem.cpp  Pickable.cpp  Timer.cpp  World.cpp
